# mcp-experiment

./: Readme.md
mcp-client-typescript/: bun.lockb  claude.ts  gemini.ts  index.ts  logger.ts  package-lock.json  package.json  server.js
mcp-server-rust/: Cargo.toml
mcp-server-rust/src/: main.rs  tools.rs
