[package]
name = "rust-mcp-2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server"] }
rmcp-macros = "0.1.5"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
